--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "babel-plugin-lodash": "^3.2.11",
     "bluebird": "^3.4.7",
     "es6-object-assign": "^1.1.0",
-    "gatsby": "^2.15.0",
-    "gatsby-link": "latest",
+    "gatsby": "^2.15.28",
+    "gatsby-link": "^2.2.17",
     "gatsby-plugin-catch-links": "latest",
     "gatsby-plugin-glamor": "latest",
     "gatsby-plugin-google-analytics": "latest",
@@ -29,7 +29,7 @@
     "gatsby-transformer-sharp": "latest",
     "gatsby-transformer-yaml": "latest",
     "glamor": "^2.20.40",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.13",
     "lodash-id": "^0.14.0",
     "lodash-webpack-plugin": "^0.11.2",
     "prismjs": "^1.15.0",
